added texts to the webpages

--- a/akpabio/index.html
+++ b/akpabio/index.html
@@ -8,16 +8,24 @@
 <body>
     <h1>Ger's Personal Site</h1>
 
-    <p><img src="images/profile.jpg" alt="my profile photo" width="600px" height="600px"></p>
+    <p><img src="images/profile.jpg" alt="my profile photo" width="200px" height="200px"></p>
 
-    <p>Welcome to my little corner of the internet — a space where curiosity meets creativity. I’m currently a full-time learner with a soft spot for meaningful design, hands-on crafts, and storytelling through journaling. When I’m not immersed in a tech internship or scribbling in one of my many journals, I’m usually dreaming up something new to make, explore, or share. Thanks for stopping by — feel free to click around and get to know me better. 🌿✨</p>
+    <p>
+        Welcome to my little corner of the internet — a space where curiosity meets creativity. I’m currently a full-time learner with a soft spot for meaningful design, hands-on crafts, and storytelling through journaling. When I’m not immersed in a tech internship or scribbling in one of my many journals, I’m usually dreaming up something new to make, explore, or share. Thanks for stopping by — feel free to click around and get to know me better. 🌿✨
+    </p>
 
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="where.html">Where I live</a></li>
             <li><a href="work.html">What I do</a></li>
-            <li><a href="interests/index.html">My Interests</a></li>
+            <li><a href="interests/index.html">My Interests</a>
+                <ul>
+                    <li><a href="interests/diy.html">DIY Crafts</a></li>
+                    <li><a href="interests/journal.html">Journaling</a></li>
+                    <li><a href="interests/design.html">Design Curious</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 </body>
