added content to the pages in interests

--- a/akpabio/interests/index.html
+++ b/akpabio/interests/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Site: Interests</title>
 </head>
 <body>
-    
+    <h1>Ger's Personal Site: Interests</h1>
+
+    <p>
+        These are the things that really feel like me: crafting stuff with my hands, journaling my thoughts and moments, and just exploring the world of design at my own pace. I don’t do any of them to be perfect — I do them because they make me feel calm, creative, and curious. Sometimes it’s a crochet project, other times it’s designing a layout or writing about my week. They help me express myself and keep learning in ways that feel natural to me.
+    </p>
+
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../where.html">Where I live</a></li>
+            <li><a href="../work.html">What I do</a></li>
+            <li><a href="index.html">My Interests</a>
+                <ul>
+                    <li><a href="diy.html">DIY Crafts</a></li>
+                    <li><a href="journal.html">Journaling</a></li>
+                    <li><a href="design.html">Design Curious</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
