--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Personal Site: Home Page</title>
 </head>
 <body>
-    <h1>Ger's Personal Site</h1>
+    <h1>Lyn's Personal Site</h1>
 
     <p><img src="images/profile.jpg" alt="my profile photo" width="200px" height="200px"></p>
 
