--- a/interests/design.html
+++ b/interests/design.html
@@ -6,7 +6,7 @@
     <title>Personal Interests Site: Design</title>
 </head>
 <body>
-    <h1>Ger's Interests: Design</h1>
+    <h1>Lyn's Interests: Design</h1>
 
     <p><img src="../images/design.jpg" alt="design graphic" width="200px" height="200px"></p>
 
