--- a/interests/diy.html
+++ b/interests/diy.html
@@ -6,7 +6,7 @@
     <title>Personal Interests Site: DIY Crafts</title>
 </head>
 <body>
-    <h1>Ger's Interests: DIY Crafts</h1>
+    <h1>Lyn's Interests: DIY Crafts</h1>
 
     <p><img src="../images/diy.jpg" alt="a handmade card" width="200px" height="200px"></p>
 
