--- a/interests/index.html
+++ b/interests/index.html
@@ -6,7 +6,7 @@
     <title>Personal Site: Interests</title>
 </head>
 <body>
-    <h1>Ger's Personal Site: Interests</h1>
+    <h1>Lyn's Personal Site: Interests</h1>
 
     <p>
         These are the things that really feel like me: crafting stuff with my hands, journaling my thoughts and moments, and just exploring the world of design at my own pace. I don’t do any of them to be perfect — I do them because they make me feel calm, creative, and curious. Sometimes it’s a crochet project, other times it’s designing a layout or writing about my week. They help me express myself and keep learning in ways that feel natural to me.
