--- a/interests/journal.html
+++ b/interests/journal.html
@@ -6,7 +6,7 @@
     <title>Personal Interests Site: Journaling</title>
 </head>
 <body>
-    <h1>Ger's Interests: Journaling</h1>
+    <h1>Lyn's Interests: Journaling</h1>
 
     <p><img src="../images/journaling.jpg" alt="a journal entry" width="200px" height="200px"></p>
 
