--- a/where.html
+++ b/where.html
@@ -6,7 +6,7 @@
     <title>Personal Site: Where I live</title>
 </head>
 <body>
-    <h1>Ger's Personal Site: Where I live</h1>
+    <h1>Lyn's Personal Site: Where I live</h1>
 
     <p><img src="images/moore-road.jpg" alt="moore road, yaba" width="200px" height="200px"></p>
 
