--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
     <title>Personal Site: What I do</title>
 </head>
 <body>
-    <h1>Ger's Personal Site: What I do</h1>
+    <h1>Lyn's Personal Site: What I do</h1>
 
     <p><img src="images/female-dev.jpg" alt="photo of a female dev" width="200px" height="200px"></p>
 
